--- a/gb/21/6/20/n13033939.md
+++ b/gb/21/6/20/n13033939.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/dnvycw364/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/dnvycw364/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/dnvycw364/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/dnvycw364/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/dnvycw364/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dnvycw364/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/dnvycw364/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/dnvycw364/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/dnvycw364/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/dnvycw364/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/dnvycw364/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/dnvycw364/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/dnvycw364/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/dnvycw364/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/dnvycw364/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/dnvycw364/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/dnvycw364/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/dnvycw364/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/dnvycw364/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/dnvycw364/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/dnvycw364/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/dnvycw364/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/dnvycw364/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/dnvycw364/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/dnvycw364/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/dnvycw364/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/dnvycw364/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/dnvycw364/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/dnvycw364/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/dnvycw364/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/dnvycw364/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/dnvycw364/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/dnvycw364/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/dnvycw364/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/dnvycw364/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/dnvycw364/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/dnvycw364/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/dnvycw364/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/dnvycw364/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/dnvycw364/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/dnvycw364/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/dnvycw364/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/dnvycw364/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/dnvycw364/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/dnvycw364/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/dnvycw364/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/dnvycw364/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>新州政府明年继续提供免费学前教育服务</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/06/id13034003-GettyImages-170725831-600x400.jpg" />
 <h6>2020年，新州有大约22%的家庭在学前教育上没有支付任何费用（SAEED KHAN/AFP via Getty Images）
 </h6>
 <hr>
-<p>【大纪元2021年06月20日讯】（大纪元记者天睿澳洲悉尼编译报导）<ahref="https://github.com/dnvycw364/djy/blob/master/gb/tag/%E6%96%B0%E5%B7%9E.md#1">新州</a>政府决定继续提供儿童学前教育服务补贴，许多儿童明年将可获得每周15小时的<ahref="https://github.com/dnvycw364/djy/blob/master/gb/tag/%E5%85%8D%E8%B4%B9%E5%AD%A6%E5%89%8D%E6%95%99%E8%82%B2.md#1">免费学前教育</a>服务。</p>
-<p>6月20日，<ahref="https://github.com/dnvycw364/djy/blob/master/gb/tag/%E6%96%B0%E5%B7%9E.md#1">新州</a>财政厅长佩罗泰特（Dominic Perrottet）宣布，新的<ahref="https://github.com/dnvycw364/djy/blob/master/gb/tag/%E5%85%8D%E8%B4%B9%E5%AD%A6%E5%89%8D%E6%95%99%E8%82%B2.md#1">免费学前教育</a>计划—Start Strong Free Preschool将从2022年1月开始实施，取代将于今年年底结束的旧计划，新州政府会继续把支持家庭和儿童当成优先事项。</p>
+<p>【大纪元2021年06月20日讯】（大纪元记者天睿澳洲悉尼编译报导）<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%96%B0%E5%B7%9E.md#1">新州</a>政府决定继续提供儿童学前教育服务补贴，许多儿童明年将可获得每周15小时的<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%85%8D%E8%B4%B9%E5%AD%A6%E5%89%8D%E6%95%99%E8%82%B2.md#1">免费学前教育</a>服务。</p>
+<p>6月20日，<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%96%B0%E5%B7%9E.md#1">新州</a>财政厅长佩罗泰特（Dominic Perrottet）宣布，新的<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%85%8D%E8%B4%B9%E5%AD%A6%E5%89%8D%E6%95%99%E8%82%B2.md#1">免费学前教育</a>计划—Start Strong Free Preschool将从2022年1月开始实施，取代将于今年年底结束的旧计划，新州政府会继续把支持家庭和儿童当成优先事项。</p>
 <p>新州教育厅长米切尔（Sarah Mitchell）表示，儿童早期教育非常重要，特别是在上学前的那关键两年，政府将为此投入1.5亿澳元。家长们在每个孩子的学前教育支出上最高可节省4000澳元的费用，缓解生活成本压力，也有助于平衡工作和家庭生活。</p>
 <p>多达740个社区和流动学前教育机构将从这项重要的投资中受益。新州教育厅的学前教育机构也将得到支持，继续提供免费的学前教育。</p>
 <p>根据2021年的旧计划，政府为较低收入阶层地区补贴了几乎全部学前教育费用，为较高收入阶层地区补贴了80%的费用。</p>
@@ -15,53 +15,54 @@
 <p>2020年，新州有大约22%的家庭在学前教育上没有支付任何费用，这一比例在全澳最低。西澳有54%的家庭获得了免费学前教育，塔州和北领地为60%以上。</p>
 <p>新州拥有学龄前儿童的家庭中，有一半的家庭每小时支付1至4澳元的学前教育费用，23%的家庭支付5至9澳元，4%的家庭支付10至14澳元。</p>
 <p>责任编辑：李寻</p>
-<p>了解更多澳洲即时要闻及生活资讯，请点击?<ahref="https://github.com/dnvycw364/djy/blob/master/gb/ncid1161841.md#1">dajiyuan.com.au</a><br />
+<p>了解更多澳洲即时要闻及生活资讯，请点击?<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/ncid1161841.md#1">dajiyuan.com.au</a><br />
 （本文未经许可不得转载或建立镜像网站）</p>
 
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/dnvycw364/djy/blob/master/gb/21/6/20/n13033894.md#1">远程教育获认可 澳名牌大学中国留学生增加</a></li>
-<li><a href="https://github.com/dnvycw364/djy/blob/master/gb/21/6/20/n13033873.md#1">700多警察在悉尼大搜查 起诉200多人 缴获37把刀</a></li>
-<li><a href="https://github.com/dnvycw364/djy/blob/master/gb/21/6/19/n13033863.md#1">南澳州长：阿德莱德是本地疫苗生产佳地</a></li>
-<li><a href="https://github.com/dnvycw364/djy/blob/master/gb/21/6/19/n13032312.md#1">强制接种恐致三分之一西澳老年护理员工辞职</a></li>
-<li><a href="https://github.com/dnvycw364/djy/blob/master/gb/21/6/19/n13032270.md#1">澳洲就葡萄酒关税向世贸状告中共</a></li>
-<li><a href="https://github.com/dnvycw364/djy/blob/master/gb/21/6/19/n13032222.md#1">澳洲拟允许留学生入境 测试边境开放系统</a></li>
-<li><a href="https://github.com/dnvycw364/djy/blob/master/gb/21/6/19/n13032126.md#1">悉尼多条高速路收费7月1日起上调</a></li>
-<li><a href="https://github.com/dnvycw364/djy/blob/master/gb/21/6/19/n13032122.md#1">新州财政厅长宣布投资1.96亿修改教学大纲</a></li>
-<li><a href="https://github.com/dnvycw364/djy/blob/master/gb/21/6/18/n13030705.md#1">对待中共 大多数澳人希望政府“坚持价值观”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13689970.md#1">政府呼吁提高工资增长同时兼顾企业生存能力</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689814.md#1">E-Toll收费系统再出错 近8万驾车者受影响</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689836.md#1">新州警方在悉尼西南区查获价值25万元毒品</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688662.md#1">澳洲学校2023年开始启用新教学大纲</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688102.md#1">新州洪灾后 悉尼发现蚊子传播罗斯河病毒</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13687833.md#1">AHPPC：密接者隔离规定可在疫情高峰后废除</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688095.md#1">澳洲4月3日进入冬令时 时间回拨一小时</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13687745.md#1">悉尼五星级酒店香格里拉少付员工逾300万薪资</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13687828.md#1">强风肆虐悉尼 大树刮倒 屋顶被掀</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13687556.md#1">移民部长：打工度假者支持洪灾重建 可续签证</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/dnvycw364/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/7/n11707479.md#1" target="_blank">林辉：上海中国国货公司创办人死于文革前</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/31/n11014025.md#1" target="_blank">绝处逢生 79岁老军医讲述的亲身经历</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/7/18/n10571152.md#1" target="_blank">凌晓辉：毒害人类灵魂的共产主义理论（下）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/21/n11203160.md#1" target="_blank">一位北京法轮功学员经历的4·25大上访</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/uolkhq362/djy/blob/master/gb/21/5/31/n12989678.md#1">三国高人水镜先生如何预言刘备、诸葛亮</a></li>
-<li><a href="https://github.com/uolkhq362/djy/blob/master/gb/21/6/15/n13022866.md#1">女子年幼时“溺毙” 感悟自己曾是高层生命</a></li>
-<li><a href="https://github.com/uolkhq362/djy/blob/master/gb/21/6/9/n13008956.md#1">端午节俗蕴藏哪些阴阳五行的道理？</a></li>
-<li><a href="https://github.com/uolkhq362/djy/blob/master/gb/21/6/11/n13016050.md#1">【未解之谜】亚特兰大石头山神秘的龙珠</a></li>
-<li><a href="https://github.com/uolkhq362/djy/blob/master/gb/21/6/6/n13002603.md#1">才华耀世的苏轼小时候改了老师的诗 师也自叹不如</a></li>
-<li><a href="https://github.com/uolkhq362/djy/blob/master/gb/21/6/17/n13029504.md#1">【大话西油】威尼斯派提香：在天堂和世俗间徘徊</a></li>
-<li><a href="https://github.com/uolkhq362/djy/blob/master/gb/21/6/19/n13032472.md#1">【拍案惊奇】台山核泄发酵之际 核电专家突跳楼</a></li>
-<li><a href="https://github.com/uolkhq362/djy/blob/master/gb/21/6/18/n13031093.md#1">【拍案惊奇】普京笑答中共武统 让北京失望了？</a></li>
-<li><a href="https://github.com/uolkhq362/djy/blob/master/gb/21/6/17/n13029064.md#1">美国专家：警告过苹果公司 如今恶梦成真</a></li>
-<li><a href="https://github.com/uolkhq362/djy/blob/master/gb/21/6/17/n13029449.md#1">打辉瑞、莫德纳疫苗出现心脏问题？警惕3症状</a></li>
-<li><a href="https://github.com/uolkhq362/djy/blob/master/gb/21/6/16/n13026109.md#1">想要健康和长寿吗？ 停止五个坏习惯</a></li>
-<li><a href="https://github.com/uolkhq362/djy/blob/master/gb/21/6/16/n13026880.md#1">迪丽热巴被一眼认定演女主角 理由令人讶异</a></li>
-<li><a href="https://github.com/uolkhq362/djy/blob/master/gb/21/6/16/n13027003.md#1">吴尊爸爸75岁生日 冻龄外表与儿子像兄弟</a></li>
-<li><a href="https://github.com/uolkhq362/djy/blob/master/gb/21/6/17/n13027271.md#1">杜汶泽发文斥假新闻 自曝与刘德华闹掰原因</a></li>
-<li><a href="https://github.com/uolkhq362/djy/blob/master/gb/21/6/17/n13029756.md#1">李英爱50岁近照超冻龄 10岁龙凤胎相貌曝光</a></li>
-<li><a href="https://github.com/uolkhq362/djy/blob/master/gb/21/6/17/n13027747.md#1">获邀奥运表演 跆拳道团体震撼《美国达人秀》</a></li>
-<li><a href="https://github.com/uolkhq362/djy/blob/master/gb/21/6/13/n13019649.md#1">肾越好越长寿！中医师授养肾5秘诀</a></li>
-<li><a href="https://github.com/uolkhq362/djy/blob/master/gb/21/6/17/n13029449.md#1">打辉瑞、莫德纳疫苗出现心脏问题？警惕3症状</a></li>
-<li><a href="https://github.com/uolkhq362/djy/blob/master/gb/21/6/16/n13026109.md#1">想要健康和长寿吗？ 停止五个坏习惯</a></li>
-<li><a href="https://github.com/uolkhq362/djy/blob/master/gb/21/6/18/n13031642.md#1">莫德纳疫苗效力有多久？副作用和禁忌一次看</a></li>
-<li><a href="https://github.com/uolkhq362/djy/blob/master/gb/21/6/17/n13028728.md#1">脏蔬果2021年排名 草莓第一 如何清洗放心</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689709.md#1">唐瑞讲故事｜朗读｜小熊维尼第五章</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13687492.md#1">【未解之谜】濒死体验 神启：生命可以选择</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688852.md#1">【新闻大家谈】美国2疏忽 中共借机叫板三角联盟</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683454.md#1">5种超级蔬菜 抗氧化、提高免疫又防癌症</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/28/n13677160.md#1">早餐来一杯治愈大脑！清除脑雾的方法</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/dnvycw364/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/dnvycw364/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/6/20/n13033939.htm">新州政府明年继续提供免费学前教育服务</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/6/20/n13033939.htm">新州政府明年继续提供免费学前教育服务</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/dnvycw364/djy/blob/master/gb/21/6/20/n13033939.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/dnvycw364/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dnvycw364/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/dnvycw364/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/dnvycw364/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/dnvycw364/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dnvycw364/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/dnvycw364/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dnvycw364/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/dnvycw364/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dnvycw364/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/dnvycw364/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dnvycw364/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/dnvycw364/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dnvycw364/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/dnvycw364/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dnvycw364/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/dnvycw364/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dnvycw364/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/dnvycw364/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dnvycw364/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/dnvycw364/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dnvycw364/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/dnvycw364/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dnvycw364/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/dnvycw364/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dnvycw364/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/dnvycw364/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dnvycw364/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/dnvycw364/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dnvycw364/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/dnvycw364/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dnvycw364/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/dnvycw364/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dnvycw364/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/dnvycw364/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dnvycw364/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/dnvycw364/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dnvycw364/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/dnvycw364/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dnvycw364/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/dnvycw364/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dnvycw364/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/dnvycw364/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dnvycw364/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/dnvycw364/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dnvycw364/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/dnvycw364/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dnvycw364/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/21/6/20/n13033939.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
